add assert_integrity feature in package json

--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "typescript": "^5.0.4"
   },
   "cds": {
+    "features": {
+      "assert_integrity": "db"
+    },
     "requires": {
       "db": {
         "kind": "sqlite",
